Syntax for comparing counts in context expressions to constants.

--- a/uk.ac.kcl.inf.zschaler.gridgames/xtend-gen/uk/ac/kcl/inf/zschaler/gridgames/generator/.gitignore
+++ b/uk.ac.kcl.inf.zschaler.gridgames/xtend-gen/uk/ac/kcl/inf/zschaler/gridgames/generator/.gitignore
@@ -5,3 +5,5 @@
 /.FrameGenerator.java._trace
 /.ModelPreprocessor.java._trace
 /.CellContextGenerator.java._trace
+/.CellContextGenerator.xtendbin
+/CellContextGenerator.java
