Added two example projects. This addresses Issue #4.

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ hs_err_pid*
 
 # Xtend binaries
 *.xtendbin
+/uk.ac.kcl.inf.zschaler.gridgames.samples.minesweeper/bin
+/uk.ac.kcl.inf.zschaler.gridgames.samples.game_of_life/bin
