--- a/uk.ac.kcl.inf.szschaler.gridgames/xtend-gen/uk/ac/kcl/inf/szschaler/gridgames/generator/.gitignore
+++ b/uk.ac.kcl.inf.szschaler.gridgames/xtend-gen/uk/ac/kcl/inf/szschaler/gridgames/generator/.gitignore
@@ -1,2 +1,8 @@
 /.GridGameGenerator.java._trace
 /GridGameGenerator.java
+/.CellContextGenerator.java._trace
+/.CellGenerator.java._trace
+/.CommonGenerator.java._trace
+/.FieldGenerator.java._trace
+/.FrameGenerator.java._trace
+/.ModelPreprocessor.java._trace
