--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ hs_err_pid*
 # Generated sources
 src-gen/
 xtend-gen/
+bin/
 
 # Example binaries (generated sources are automatically ignored)
 /uk.ac.kcl.inf.zschaler.gridgames.samples.minesweeper/bin
